--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,7 +12,7 @@ env:
   
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build
